--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
     <![endif]-->
 </head>
 
-<body onload="initialize()">
+<body>
     <h1>Atom Simulation</h1>
     <div id="controls">
-        <button type="button" onclick="draw()">Draw Rectangles</button>
+        <button type="button" onclick="sim.draw()">Draw Rectangles</button>
     </div>
     <canvas id="simulation">
         A simulation of atoms.
     </canvas>
-
 
     <script src="scripts.js"></script>
 </body>
