Converted all previous code to use jQuery.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="A simulation of atoms">
     <meta name="author" content="Nathan Shane">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="app/style.css">
 
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -29,7 +29,7 @@
     A simulation of atoms.
 </canvas>
 
-<script src="main.js"></script>
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="app/main.js"></script>
 </body>
 </html>
