Added interval that draws rectangles every second.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 <button id="show-controls" type="button" onclick="controls.toggle()">Toggle Controls</button>
 <div id="controls">
+    <button id="play-pause" type="button" onclick="controls.playPause()">Play Simulation</button>
     <button type="button" onclick="controls.drawRectangles()">Draw Rectangles</button>
     <label for="create-atom-number-input">Enter the number of atoms you would like to create:</label>
     <input id="create-atom-number-input" type="text">
