--- a/index.html
+++ b/index.html
@@ -13,24 +13,23 @@
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script data-main="app/main" src="bower_components/requirejs/require.js"></script>
 </head>
 
 <body>
 <h1>Atom Simulation</h1>
 
-<button id="show-controls" type="button" onclick="controls.toggle()">Toggle Controls</button>
+<button id="show-controls" type="button">Toggle Controls</button>
 <div id="controls">
-    <button id="play-pause" type="button" onclick="controls.playPause()">Play Simulation</button>
-    <button type="button" onclick="controls.drawRectangles()">Draw Rectangles</button>
+    <button id="play-pause" type="button">Play Simulation</button>
+    <button id="draw-rectangles" type="button">Draw Rectangles</button>
     <label for="create-atom-number-input">Enter the number of atoms you would like to create:</label>
     <input id="create-atom-number-input" type="text">
-    <button type="button" onclick="controls.createAtom()">Create Atom</button>
+    <button id="create-atoms" type="button">Create Atom</button>
 </div>
 <canvas id="simulation">
     A simulation of atoms.
 </canvas>
 
-<script src="bower_components/jquery/dist/jquery.min.js"></script>
-<script src="app/main.js"></script>
 </body>
 </html>
