Created an atom display that shows the current direction of the first atom in the atoms array.

--- a/index.html
+++ b/index.html
@@ -21,14 +21,21 @@
 
 <canvas>A simulation of atoms.</canvas>
 
-<div id="controls">
+<div id="panel">
     <button id="show-controls" type="button">Toggle Controls</button>
     <div id="togglable-controls">
         <button id="play-pause" type="button">Play Simulation</button>
+        <br>
         <button id="create-atoms" type="button">Create Atoms:</button>
         <input id="create-atom-number-input" type="text" size="2">
     </div>
+
+    <div id="atom-display">
+        <label for="selected-atom-direction">Direction:</label><span id="selected-atom-direction"></span>
+    </div>
 </div>
+
+
 
 <script data-main="app/main" src="bower_components/requirejs/require.js"></script>
 </body>
