Added a button and an input for selecting an atom to display.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
     </div>
 
     <div id="atom-display">
-        <label for="selected-atom-direction">Direction:</label><span id="selected-atom-direction"></span>
+        <button id="select-atom" type="button">Select Atom Number:</button>
+        <input id="select-atom-number-input" type="text" size="2">
+        <br>
+        <label for="selected-atom-direction">Direction: </label><span id="selected-atom-direction"></span>
     </div>
 </div>
 
