Added atom values to display.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
     <button id="select-atom" type="button">Select Atom Number:</button>
     <input id="select-atom-number-input" type="text" size="2">
     <div id="atom-display" class="hidden">
-        <label for="selected-atom-direction">Direction: </label><span id="selected-atom-direction"></span>
+        <p>Number: <span id="selected-atom-num"></span></p>
+        <p>Radius: <span id="selected-atom-radius"></span></p>
+        <p>Mass: <span id="selected-atom-mass"></span></p>
+        <p>Direction: <span id="selected-atom-direction"></span>&deg;</p>
+        <p>Speed: <span id="selected-atom-speed"></span> px/s</p>
+        <p>Color: <span id="selected-atom-color"></span></p>
     </div>
 </div>
 
