Fixed display so that it now updates when simulation is playing.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div id="atom-display" class="hidden">
         <p>Number: <span id="selected-atom-num"></span></p>
         <p>Radius: <span id="selected-atom-radius"></span></p>
-        <p>Mass: <span id="selected-atom-mass"></span></p>
+        <p>Coordinates: (<span id="selected-atom-x"></span>, <span id="selected-atom-y"></span>)</p>
         <p>Direction: <span id="selected-atom-direction"></span>&deg;</p>
         <p>Speed: <span id="selected-atom-speed"></span> px/s</p>
     </div>
