Added toggle for headers and panels that fades instead of headers and panels.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 <canvas>A simulation of atoms.</canvas>
 
+<button id="toggle-headers-and-panels" type="button">Toggle Panel View</button>
 <div id="panels">
     <div id="controls" class="panel">
         <button id="show-controls" type="button">Toggle Controls</button>
