Toggle button fade works fully and mouse now disappears at end of fade.

--- a/index.html
+++ b/index.html
@@ -24,16 +24,13 @@
 
 <canvas>A simulation of atoms.</canvas>
 
-<button id="toggle-headers-and-panels" type="button">Toggle Panel View</button>
+<button id="toggle-headers-and-panels" type="button">Toggle Panel</button>
 <div id="panels">
     <div id="controls" class="panel">
-        <button id="show-controls" type="button">Toggle Controls</button>
-        <div id="togglable-controls">
-            <button id="play-pause" type="button">Play Simulation</button>
-            <br>
-            <button id="create-atoms" type="button">Create Atoms:</button>
-            <input id="create-atom-number-input" type="text" size="2">
-        </div>
+        <button id="play-pause" type="button">Play Simulation</button>
+        <br>
+        <button id="create-atoms" type="button">Create Atoms:</button>
+        <input id="create-atom-number-input" type="text" size="2">
     </div>
 
     <div id="display" class="panel">
