Changed atom number to ID in atom display and fixed the selected atom target drawing.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <button id="select-atom" type="button">Select Atom Number:</button>
         <input id="select-atom-number-input" type="text" size="2">
         <div id="atom-display" class="hidden">
-            <p>Number: <span id="selected-atom-num"></span></p>
+            <h3>ATOM #<span id="selected-atom-id"></span></h3>
             <p>Radius: <span id="selected-atom-radius"></span></p>
             <p>Coordinates: (<span id="selected-atom-x"></span>, <span id="selected-atom-y"></span>)</p>
             <p>Direction: <span id="selected-atom-direction"></span>&deg;</p>
