Changed number-input to be hidden instead of the div that contains it.

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     </div>
 </div>
 
-<div id="input-window" class="hidden">
-    <input id="number-input" type="text" size="2">
+<div id="input-window">
+    <input id="number-input" class="hidden" type="text" size="2">
 </div>
 
 <script data-main="app/main" src="bower_components/requirejs/require.js"></script>
