Select Atom button now uses dynamically appearing number input.

--- a/index.html
+++ b/index.html
@@ -29,12 +29,11 @@
     <div id="controls" class="panel">
         <button id="play-pause" type="button">Play Simulation</button>
         <br>
-        <button id="create-atoms" type="button">Create Atoms:</button>
+        <button id="create-atoms" type="button">Create Atoms</button>
     </div>
 
     <div id="display" class="panel">
-        <button id="select-atom" type="button">Select Atom Number:</button>
-        <input id="select-atom-number-input" type="text" size="2">
+        <button id="select-atom" type="button">Select Atom</button>
         <div id="atom-display" class="hidden">
             <h3>ATOM #<span id="selected-atom-id"></span></h3>
             <p>Radius: <span id="selected-atom-radius"></span></p>
