Added shortcut names to button texts.

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 <button id="toggle-headers-and-panels" type="button">Toggle Panel</button>
 <div id="panels">
     <div id="controls" class="panel">
-        <button id="play-pause" type="button">Play Simulation</button>
+        <button id="play-pause" type="button">Play Simulation <span class="shortcut">spacebar</span></button>
         <br>
-        <button id="create-atoms" type="button">Create Atoms</button>
+        <button id="create-atoms" type="button">Create Atoms <span class="shortcut">c</span></button>
     </div>
 
     <div id="display" class="panel">
-        <button id="select-atom" type="button">Select Atom</button>
+        <button id="select-atom" type="button">Select Atom <span class="shortcut">s</span></button>
         <div id="atom-display" class="hidden">
             <h3>ATOM #<span id="selected-atom-id"></span></h3>
             <p>Radius: <span id="selected-atom-radius"></span></p>
