Added a next instance button.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <div id="controls" class="panel">
         <button id="play-pause" type="button">Play Simulation <span class="shortcut">spacebar</span></button>
         <br>
+        <button id="next-instance" type="button">Next Instance <span class="shortcut">n</span></button>
+        <br>
         <button id="create-atoms" type="button">Create Atoms <span class="shortcut">c</span></button>
     </div>
 
