Added reset simulation button that pauses simulation, removes all atoms, and resets atom id iterator.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <button id="next-instance" type="button">Next Instance <span class="shortcut">n</span></button>
         <br>
         <button id="create-atoms" type="button">Create Atoms <span class="shortcut">c</span></button>
+        <br>
+        <button id="reset-simulation" type="button">Reset Simulation <span class="shortcut">r</span></button>
     </div>
 
     <div id="display" class="panel">
