Added error module that creates an error which is displayed, waits a little, then fades out and is removed.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
     <input id="number-input" class="hidden" type="text" size="2">
 </div>
 
+<div id="errors"></div>
+
 <script data-main="app/main" src="bower_components/requirejs/require.js"></script>
 </body>
 </html>
