--- a/index.html
+++ b/index.html
@@ -40,15 +40,7 @@
         <button id="unselect-atoms" type="button">Unselect Atoms <span class="shortcut">u</span></button>
     </div>
 
-    <div id="display" class="panel hidden">
-        <div id="atom-display">
-            <h3>ATOM #<span id="selected-atom-id"></span></h3>
-            <p>Radius: <span id="selected-atom-radius"></span></p>
-            <p>Coordinates: (<span id="selected-atom-x"></span>, <span id="selected-atom-y"></span>)</p>
-            <p>Direction: <span id="selected-atom-direction"></span>&deg;</p>
-            <p>Speed: <span id="selected-atom-speed"></span> px/s</p>
-        </div>
-    </div>
+    <div id="display" class="panel hidden"></div>
 </div>
 
 <div id="input-window">
