Modified function names to show new functionality of select/unselect button.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <br>
         <button id="reset-simulation" type="button">Reset Simulation <span class="shortcut">r</span></button>
         <br>
-        <button id="select-atom" type="button">Select Atom <span class="shortcut">s</span></button>
+        <button id="select-unselect-atom" type="button">Select/Unselect Atom <span class="shortcut">s</span></button>
         <br>
         <button id="unselect-atoms" type="button">Unselect Atoms <span class="shortcut">u</span></button>
     </div>
