#display no longer has any padding so that it does not to be hidden from user.

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
         <br>
         <button id="unselect-atoms" type="button">Unselect Atoms <span class="shortcut">u</span></button>
     </div>
-
-    <div id="display" class="panel hidden"></div>
+    <div id="display" class="panel"></div>
 </div>
 
 <div id="input-window">
