Fading toggle only applies to controls now.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <canvas>A simulation of atoms.</canvas>
 
-<button id="toggle-headers-and-panels" type="button">Toggle Panel <span class="shortcut">t</span></button>
+<button id="toggle-controls" type="button">Toggle Controls <span class="shortcut">t</span></button>
 <div id="panels">
     <div id="controls" class="panel">
         <button id="play-pause" type="button">Play Simulation <span class="shortcut">spacebar</span></button>
