Changed number input to type='number' so that it will only accept numbers as input.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div id="display" class="panel"></div>
 
 <div id="input-window">
-    <input id="number-input" class="hidden" type="text" size="2">
+    <input id="number-input" class="hidden" type="number" size="2">
 </div>
 
 <div id="errors"></div>
