Moved play button to bottom middle of screen and added fade and togglable classes to simplify fade/toggle code.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-<hgroup>
+<hgroup class="fade">
     <h1>Atom Simulation</h1>
     <h2>Created by Nathan Shane</h2>
 </hgroup>
@@ -25,10 +25,8 @@
 <canvas>A simulation of atoms.</canvas>
 
 <div id="controls">
-    <button id="toggle-controls" type="button">Toggle Controls <span class="shortcut">t</span></button>
-    <div id="togglable-controls" class="panel">
-        <button id="play-pause" type="button">Play Simulation <span class="shortcut">spacebar</span></button>
-        <br>
+    <button id="toggle-controls" class="fade" type="button">Toggle Controls <span class="shortcut">t</span></button>
+    <div id="sim-controls-other" class="togglable panel">
         <button id="next-instance" type="button">Next Instance <span class="shortcut">n</span></button>
         <br>
         <button id="create-atoms" type="button">Create Atoms <span class="shortcut">c</span></button>
@@ -39,6 +37,10 @@
         <br>
         <button id="unselect-atoms" type="button">Unselect Atoms <span class="shortcut">u</span></button>
     </div>
+</div>
+
+<div id="sim-controls-play" class="fade">
+    <button id="play-pause" type="button">Play Simulation <span class="shortcut">spacebar</span></button>
 </div>
 
 <div id="display" class="panel"></div>
