Added previous instance button (currently does nothing).

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 </div>
 
 <div id="sim-controls-play" class="togglable">
+    <button id="previous-instance" type="button">&#60;&#60;</button>
     <button id="play-pause" type="button">&#9658;</button>
-    <button id="next-instance" type="button"><span>&gt;</span>&gt;</button>
+    <button id="next-instance" type="button">&#62;&#62;</button>
 </div>
 
 <div id="display" class="panel"></div>
