--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div id="controls">
     <button id="toggle-controls" class="fade" type="button">Toggle Controls <span class="shortcut">t</span></button>
     <div id="sim-controls-other" class="togglable panel">
-        <p>Play: <span class="shortcut">spacebar</span><br>Next: <span class="shortcut">n</span></p>
+        <p>Previous: <span class="shortcut">p</span><br>Play: <span class="shortcut">spacebar</span><br>Next: <span class="shortcut">n</span></p>
         <button id="create-atoms" type="button">Create Atoms <span class="shortcut">c</span></button>
         <br>
         <button id="reset-simulation" type="button">Reset Simulation <span class="shortcut">r</span></button>
