--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="description" content="A simulation of atoms">
     <meta name="author" content="Nathan Shane">
 
-    <link rel="stylesheet" href="app/style.css">
 
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -52,6 +51,8 @@
 
 <div id="errors"></div>
 
+<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="app/style.css">
 <script data-main="app/main" src="bower_components/requirejs/require.js"></script>
 </body>
 </html>
