--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-<hgroup class="fadeout">
+<hgroup class="togglable">
     <h1>Atom Simulation</h1>
     <h2>Created by Nathan Shane</h2>
 </hgroup>
@@ -24,7 +24,7 @@
 <canvas>A simulation of atoms.</canvas>
 
 <div id="controls">
-    <button id="toggle-controls" class="fadeout" type="button">Toggle Controls <span class="shortcut">t</span></button>
+    <button id="toggle-controls" class="fadeout" type="button">Toggle <span class="shortcut">t</span></button>
     <div id="sim-controls-other" class="togglable panel">
         <p>Previous: <span class="shortcut">p</span><br>Play: <span class="shortcut">spacebar</span><br>Next: <span class="shortcut">n</span></p>
         <button id="create-atoms" type="button">Create Atoms <span class="shortcut">c</span></button>
