Moved shortcuts window to middle of screen.

--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
         <br>
         <button id="unselect-atoms" type="button">Unselect Atoms</button>
     </div>
-    <div id="shortcuts" class="togglable">
-        <ul>
-            <li>Show/hide: <span class="shortcut">t</span></li>
-            <li>Previous: <span class="shortcut">p</span></li>
-            <li>Play: <span class="shortcut">spacebar</span>
-            <li>Next: <span class="shortcut">n</span></li>
-            <li>Create Atoms: <span class="shortcut">c</span></li>
-            <li>Reset Simulation: <span class="shortcut">r</span></li>
-            <li>Select/Unselect Atom: <span class="shortcut">s</span></li>
-            <li>Unselect Atoms: <span class="shortcut">u</span></li>
-        </ul>
-    </div>
+</div>
+<div id="shortcuts" class="togglable panel">
+    <ul>
+        <li>Show/hide: <span class="shortcut">t</span></li>
+        <li>Previous: <span class="shortcut">p</span></li>
+        <li>Play: <span class="shortcut">spacebar</span>
+        <li>Next: <span class="shortcut">n</span></li>
+        <li>Create Atoms: <span class="shortcut">c</span></li>
+        <li>Reset Simulation: <span class="shortcut">r</span></li>
+        <li>Select/Unselect Atom: <span class="shortcut">s</span></li>
+        <li>Unselect Atoms: <span class="shortcut">u</span></li>
+    </ul>
 </div>
 
 
