--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <canvas>A simulation of atoms.</canvas>
 
 <div id="menu">
-    <button id="toggle-controls" class="fadeout" type="button">Hide <span class="shortcut">t</span></button>
+    <button id="toggle-controls" class="fadeout" type="button">Hide</button>
     <button id="toggle-shortcuts" class="togglable" type="button">Show Shortcuts</button>
 </div>
 <div id="controls">
@@ -38,9 +38,11 @@
         <button id="unselect-atoms" type="button">Unselect Atoms</button>
     </div>
 </div>
-<div id="shortcuts" class="togglable panel">
+<div id="shortcuts" class="panel hidden">
+    <h3>Shortcuts</h3>
     <ul>
         <li>Show/hide: <span class="shortcut">t</span></li>
+        <li>Show/hide Shortcuts: <span class="shortcut">h</span></li>
         <li>Previous: <span class="shortcut">p</span></li>
         <li>Play: <span class="shortcut">spacebar</span>
         <li>Next: <span class="shortcut">n</span></li>
@@ -50,8 +52,6 @@
         <li>Unselect Atoms: <span class="shortcut">u</span></li>
     </ul>
 </div>
-
-
 
 <div id="sim-controls-play" class="togglable">
     <button id="previous-instance" type="button">&#60;&#60;</button>
