Added close shortcuts button to the top right corner of the shortcuts window.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <li>Select/Unselect Atom: <span class="shortcut">s</span></li>
         <li>Unselect Atoms: <span class="shortcut">u</span></li>
     </ul>
+    <button id="close-shortcuts" type="button">x</button>
 </div>
 
 <div id="sim-controls-play" class="togglable">
