Renamed #controls div to #top-left and moved menu into #top-left. Menu buttons are now contained in an absolutely positioned div, so they are clickable.

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
 <canvas>A simulation of atoms.</canvas>
 
-<div id="menu">
-    <button id="toggle-controls" class="fadeout" type="button">Hide</button>
-    <button id="toggle-shortcuts" class="togglable" type="button">Show Shortcuts</button>
-</div>
-<div id="controls">
+<div id="top-left">
+    <div id="menu">
+        <button id="toggle-controls" class="fadeout" type="button">Hide</button>
+        <button id="toggle-shortcuts" class="togglable" type="button">Show Shortcuts</button>
+    </div>
     <div id="sim-controls-other" class="togglable panel">
         <button id="create-atoms" type="button">Create Atoms</button>
         <br>
@@ -38,6 +38,7 @@
         <button id="unselect-atoms" type="button">Unselect Atoms</button>
     </div>
 </div>
+
 <div id="shortcuts" class="panel hidden">
     <h3>Shortcuts</h3>
     <ul>
