Removed panel class that was conflicting with bootstrap. Also removed visual appearance of box containing buttons.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button id="toggle-controls" class="fadeout" type="button">Hide</button>
         <button id="toggle-shortcuts" class="togglable" type="button">Show Shortcuts</button>
     </div>
-    <div id="sim-controls-other" class="togglable panel">
+    <div id="sim-controls-other" class="togglable">
         <button id="create-atoms" type="button">Create Atoms</button>
         <br>
         <button id="reset-simulation" type="button">Reset Simulation</button>
@@ -39,7 +39,7 @@
     </div>
 </div>
 
-<div id="shortcuts" class="panel hidden">
+<div id="shortcuts" class="hidden">
     <h3>Shortcuts</h3>
     <ul>
         <li>Show/hide: <span class="shortcut">t</span></li>
@@ -61,7 +61,7 @@
     <button id="next-instance" type="button">&#62;&#62;</button>
 </div>
 
-<div id="display" class="panel"></div>
+<div id="display"></div>
 
 <div id="input-window">
     <input id="number-input" class="hidden" type="number" size="2">
