--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div id="top-left">
     <div id="menu">
-        <button id="toggle-controls" class="fadeout" type="button">Hide</button>
+        <button id="toggle-all" class="fadeout" type="button">Hide</button>
         <button id="toggle-shortcuts" class="togglable" type="button">Show Shortcuts</button>
     </div>
     <div id="sim-controls-other" class="togglable">
