Changed bottom center play controls style.

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 </div>
 
 <div id="sim-controls-play" class="togglable">
-    <button id="previous-instance" type="button">&#60;&#60;</button>
-    <button id="play-pause" type="button">&#9658;</button>
-    <button id="next-instance" type="button">&#62;&#62;</button>
+    <button id="previous-instance" type="button"><img src="assets/back.gif"></button>
+    <button id="play-pause" type="button"><img src="assets/play.gif"></button>
+    <button id="next-instance" type="button"><img src="assets/forward.gif"></button>
 </div>
 
 <div id="display"></div>
