Refactored css and added alt attribute to play images.

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 </div>
 
 <div id="sim-controls-play" class="togglable">
-    <button id="previous-instance" type="button"><img src="assets/back.gif"></button>
-    <button id="play-pause" type="button"><img src="assets/play.gif"></button>
-    <button id="next-instance" type="button"><img src="assets/forward.gif"></button>
+    <button id="previous-instance" type="button"><img src="assets/back.gif" alt="Previous Instance Button"></button>
+    <button id="play-pause" type="button"><img src="assets/play.gif" alt="Play/Pause Button"></button>
+    <button id="next-instance" type="button"><img src="assets/forward.gif" alt="Next Instance Button"></button>
 </div>
 
 <div id="display"></div>
