More improvements to appearance.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 </div>
 
-<div id="shortcuts" class="hidden">
+<div id="shortcuts" class="hidden text-content">
     <h3>Shortcuts</h3>
     <ul>
         <li>Show/hide: <span class="shortcut">t</span></li>
