Switched fadeout from show/hide button to menu so that background also fades out.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <canvas>A simulation of atoms.</canvas>
 
 <div id="top-left">
-    <div id="menu">
-        <button id="toggle-all" class="fadeout" type="button">Hide</button>
+    <div id="menu" class="fadeout">
+        <button id="toggle-all" type="button">Hide</button>
         <button id="toggle-shortcuts" class="togglable" type="button">Show Shortcuts</button>
     </div>
     <div id="sim-controls-other" class="togglable">
