--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 
 <div id="errors"></div>
 
+<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 <link rel="stylesheet" href="app/style.css">
 <script data-main="app/main" src="bower_components/requirejs/require.js"></script>
