Added close button x to top corner of About box as well.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <li>Select/Unselect Atom: <span class="shortcut">s</span></li>
         <li>Unselect Atoms: <span class="shortcut">u</span></li>
     </ul>
-    <button id="close-shortcuts" type="button">x</button>
+    <button class="close-button" type="button">x</button>
 </div>
 
 <div id="about" class="center text-content hidden">
@@ -57,6 +57,7 @@
     <p>Atom Simulation is a 2d controllable simulation of atoms, written in Javascript for the entertainment of many a physics/chemistry nerd all around the world.</p>
     <h3>Credits</h3>
     <p>Creator/Developer: Nathan Shane<br><strong>BIG</strong> thanks to Mariam Kobuladze for the beautiful design.</p>
+    <button class="close-button" type="button">x</button>
 </div>
 
 <div id="sim-controls-play" class="togglable">
