Added About shortcut to Shortcuts list.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <ul>
         <li>Show/hide: <span class="shortcut">t</span></li>
         <li>Show/hide Shortcuts: <span class="shortcut">h</span></li>
+        <li>Show/hide About: <span class="shortcut">a</span></li>
         <li>Previous: <span class="shortcut">p</span></li>
         <li>Play: <span class="shortcut">spacebar</span>
         <li>Next: <span class="shortcut">n</span></li>
